[gd_scene load_steps=19 format=3 uid="uid://cmxsk4jm7l87j"]

[ext_resource type="Script" uid="uid://g7ign1nxf6kj" path="res://music_toys.gd" id="1_5r4j1"]
[ext_resource type="FontFile" uid="uid://rvjbc8pu44du" path="res://fonts/Hyperspace.otf" id="7_150ad"]
[ext_resource type="Material" uid="uid://bwy778jyvpj15" path="res://seq_mat.tres" id="8_tqx1f"]
[ext_resource type="Material" uid="uid://dvo75cymypytd" path="res://green.tres" id="11_g562f"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="13_wjct6"]
[ext_resource type="Script" uid="uid://cjvs2k6u0sram" path="res://addons/godot-xr-tools/player/player_body.gd" id="15_sj4n6"]
[ext_resource type="Script" uid="uid://c7d4ikpwls2n6" path="res://sequencer.gd" id="16_6ue7p"]
[ext_resource type="PackedScene" uid="uid://dm1qa5btl0821" path="res://pad_a.tscn" id="17_pakd3"]

[sub_resource type="PlaneMesh" id="PlaneMesh_00q4b"]
size = Vector2(100, 100)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_307sh"]

[sub_resource type="Environment" id="Environment_c4jos"]
ambient_light_color = Color(0.775063, 0.775063, 0.775063, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_m1hcr"]
radius = 0.01

[sub_resource type="SphereMesh" id="SphereMesh_qp3di"]
radius = 0.02
height = 0.04

[sub_resource type="SphereShape3D" id="SphereShape3D_32eju"]
radius = 0.01

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fy7ik"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uox6i"]

[sub_resource type="SphereMesh" id="SphereMesh_gynoj"]
radius = 0.02
height = 0.04

[sub_resource type="SphereShape3D" id="SphereShape3D_scstw"]
radius = 0.02

[node name="root" type="Node3D"]
script = ExtResource("1_5r4j1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.486978, -0.857167, -0.16768, -0.325568, -1.4231e-08, 0.945518, -0.810468, 0.515038, -0.279066, 0, 0, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="ground" type="MeshInstance3D" parent="StaticBody3D"]
visible = false
material_override = ExtResource("11_g562f")
mesh = SubResource("PlaneMesh_00q4b")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_307sh")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_c4jos")

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="XROrigin" type="XROrigin3D" parent="player"]

[node name="XRCamera3D" type="XRCamera3D" parent="player/XROrigin"]

[node name="left" type="XRController3D" parent="player/XROrigin"]
tracker = &"left_hand"

[node name="MovementDirect" parent="player/XROrigin/left" instance=ExtResource("13_wjct6")]

[node name="Area3D" type="Area3D" parent="player/XROrigin/left"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="player/XROrigin/left/Area3D"]
shape = SubResource("SphereShape3D_m1hcr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="player/XROrigin/left"]
mesh = SubResource("SphereMesh_qp3di")

[node name="right" type="XRController3D" parent="player/XROrigin"]
tracker = &"right_hand"

[node name="Area3D" type="Area3D" parent="player/XROrigin/right"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="player/XROrigin/right/Area3D"]
shape = SubResource("SphereShape3D_32eju")

[node name="MeshInstance3D" type="MeshInstance3D" parent="player/XROrigin/right"]
mesh = SubResource("SphereMesh_qp3di")

[node name="XRToolsPlayerBody" type="CharacterBody3D" parent="player/XROrigin"]
top_level = true
script = ExtResource("15_sj4n6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="player/XROrigin/XRToolsPlayerBody"]
shape = SubResource("CapsuleShape3D_fy7ik")

[node name="CollisionShape3D" type="CollisionShape3D" parent="player"]
shape = SubResource("CapsuleShape3D_uox6i")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(-0.220772, -0.975312, -0.00516406, 0.254535, -0.0627264, 0.965027, -0.941526, 0.211737, 0.2621, -4.2177, 1.84116, -4.5774)
light_energy = 16.0

[node name="start_stop" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.689672, 2.5, 0.665063)

[node name="mesh" type="MeshInstance3D" parent="start_stop"]
mesh = SubResource("SphereMesh_gynoj")
surface_material_override/0 = ExtResource("8_tqx1f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="start_stop"]
shape = SubResource("SphereShape3D_scstw")

[node name="sequencer" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.548, 2.5, 0.936)
script = ExtResource("16_6ue7p")
font = ExtResource("7_150ad")
pad_scene = ExtResource("17_pakd3")
steps = 16

[node name="Timer" type="Timer" parent="sequencer"]
wait_time = 0.05
autostart = true

[node name="timer_ball" type="MeshInstance3D" parent="sequencer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
mesh = SubResource("SphereMesh_gynoj")
surface_material_override/0 = ExtResource("8_tqx1f")

[node name="sequencer2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.561553, 2.5, 0.665063)
script = ExtResource("16_6ue7p")
font = ExtResource("7_150ad")
path_str = "res://notes/bla"
pad_scene = ExtResource("17_pakd3")
steps = 16

[node name="Timer" type="Timer" parent="sequencer2"]
wait_time = 0.125

[node name="timer_ball" type="MeshInstance3D" parent="sequencer2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
mesh = SubResource("SphereMesh_gynoj")
surface_material_override/0 = ExtResource("8_tqx1f")

[connection signal="area_entered" from="start_stop" to="sequencer" method="_on_start_stop_area_entered"]
[connection signal="area_entered" from="start_stop" to="sequencer2" method="_on_start_stop_area_entered"]
[connection signal="timeout" from="sequencer/Timer" to="sequencer" method="_on_timer_timeout"]
[connection signal="timeout" from="sequencer2/Timer" to="sequencer2" method="_on_timer_timeout"]
